# azure-cost-optimizer

./: .env.example  .gitignore  README.md  dashboard.py  main.py  pyproject.toml
azure_cost_optimizer/: __init__.py  auth.py  config.py  openai_client.py  pipeline.py  tenant_registry.py
azure_cost_optimizer/agents/: __init__.py  collector.py  optimizer.py  structurer.py
azure_cost_optimizer/models/: __init__.py  raw_data.py  structured.py
azure_cost_optimizer/tools/: __init__.py  optimizer_tools.py  structurer_tools.py
